# Kotoba

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  sandbox.py  sandbox_data.xml  setup.py
.github/workflows/: package-release.yml  package-test.yml
kotoba/: __init__.py  common.py  driver.py  exception.py  fs.py  graph.py  kami.py  kotoba.py  misc.py  parser.py  selector.py
test/: bootstrap.py  test.py
test/data/: locator.xml  sandbox.json  sandbox_document.json
test/testcase/: test_initialization_with_file.py  test_integration_with_selector.py  test_integration_with_selector_json.py  test_selector.py
zulu-build-setup/: README.md  setup.py
